# architectures-2023

./: .gitignore  CHANGELOG.md  README.md  config.toml  main.py  pyproject.toml
.github/workflows/: main.yml
architectures_2023/: data.py  period.py  radius.py  snr.py  visual.py
tests/: conftest.py  test_data_processing.py
tests/data/: test_set.csv
