[project]
name = "architectures-2023"
version = "0.2.0"
description = "Repository for generating figures and statistic for the paper Orbital Periods and Other Properties of Kepler Planets"
readme = "README.md"
authors = [{ name = "Kadri M. Nizam", email = "knizam@psu.edu" }]
requires-python = ">=3.12.5"
dependencies = [
    "joblib>=1.4.2",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["architectures_2023"]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "pytest>=8.3.4", "ruff>=0.8.2"]
